<resources>
    <string name="app_name">Pok\u00E9llection</string>
    <string name="cardNameLabel">Card Name:</string>
    <string name="cardNameEditBox">Card Name</string>
    <string name="cardSetNameLabel">Set Name:</string>
    <string name="cardSetNameEditBox">Set Name</string>
    <string name="cardSetNumLabel">Card Number:</string>
    <string name="cardSetNumEditBox">Card Number</string>
    <string name="buttonCardAdd">Add Card</string>
    <string name="buttonCancel">Cancel</string>
    <string name="errorEmptyStrings">Error! Enter card name.</string>
    <string name="errorCardNotFound">Error! Card not found.</string>
    <string name="errorNoInternet">Error! Device not connected to the Internet.</string>
    <string name="deleteAllCardsLabel">Remove all cards from collection</string>
    <string name="deleteAllCardsNotification">Removed all cards from collection.</string>
    <string name="searchButtonTitle">Search</string>
    <string name="cardDeletedNotif">Card deleted.</string>
    <string name="addedCardNotif">Card added to collection.</string>
    <string name="userPickCardLabel">Select the card which you want to add to your collection. </string>
</resources>