...
            android:paddingRight="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/enterCardName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:hint="@string/cardNameEditBox"
            android:textColor="@color/colorBlack"
            android:singleLine="true"
...
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAllCaps="true"
            />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
...
