<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pokeCard_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:listitem="@layout/layout_poke_card_list"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:src="@drawable/ic_baseline_add_24"
        android:id="@+id/add_card_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        app:backgroundTint="@color/colorRed"
        />

</androidx.constraintlayout.widget.ConstraintLayout>